fix: Fix the z-index of the dashboard menu

--- a/src/css/_dashboard.scss
+++ b/src/css/_dashboard.scss
@@ -4,6 +4,7 @@
   position: fixed;
   top: 100px;
   left: 40px;
+  z-index: 20;
   width: 240px;
   margin: auto;
 
